--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://app-boys-games-backend.onrender.com/api
+﻿VITE_API_BASE_URL=https://app-boys-games-backend.onrender.com/api
