Fix vercel rewrite schema

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/index.html",
-      "missing": [
-        { "type": "file" },
-        { "type": "dir" }
-      ]
+      "destination": "/"
     }
   ]
 }
