--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-  "preview": "vite preview",
-  "server": "node server/index.js"
+    "preview": "vite preview",
+    "server": "node server/index.js"
   },
   "dependencies": {
-  "vite": "^5.4.8",
-  "bcryptjs": "^2.4.3",
-  "cors": "^2.8.5",
-  "dotenv": "^16.4.5",
-  "express": "^4.19.2",
-  "jsonwebtoken": "^9.0.2",
-  "mongoose": "^8.5.3"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dompurify": "^3.3.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.3",
+    "quill": "^2.0.3",
+    "sanitize-html": "^2.17.0",
+    "vite": "^5.4.8"
+  },
+  "devDependencies": {
+    "playwright": "^1.56.0"
   }
 }
