--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "cors": "^2.8.5",
     "dompurify": "^3.3.0",
     "dotenv": "^16.4.5",
+    "easymde": "^2.20.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^17.0.1",
     "mongoose": "^8.5.3",
-    "quill": "^2.0.3",
     "sanitize-html": "^2.17.0",
     "vite": "^5.4.8"
   },
