--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dompurify": "^3.3.1",
     "dotenv": "^16.4.5",
     "easymde": "^2.20.0",
     "express": "^4.22.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "marked": "^17.0.1",
     "mongoose": "^8.20.2",
@@ -23,6 +26,7 @@
     "vite": "^6.0.0"
   },
   "devDependencies": {
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "supertest": "^7.1.4"
   }
 }
