feat(billing): integrate Stripe payment processing and add admin student management features

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,11 @@ AUTH_RATE_MAX=10
 ACCESS_TOKEN_TTL_SECONDS=900
 REFRESH_TOKEN_TTL_DAYS=7
 
+# Stripe Payment Integration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+STRIPE_PRICE_ID=price_your_price_id_here
+FRONTEND_BASE_URL=http://localhost:5173
+
 # Client
 VITE_API_BASE_URL=http://localhost:4000/api
